# Compress

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cylan/compress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: compress-lib.cpp
app/src/main/cpp/inculde/: jpeglib.h
app/src/main/java/com/cylan/compress/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/cylan/compress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
